# rust-code-analysis

./: Cargo.toml  recreate-grammars.sh
enums/: Cargo.toml
enums/src/: languages.rs  macros.rs
src/: langs.rs  parser.rs
src/c_langs_macros/: c_macros.rs  c_specials.rs
src/languages/: language_ccomment.rs  language_cpp.rs  language_java.rs  language_javascript.rs  language_mozjs.rs  language_nix.rs  language_preproc.rs  language_python.rs  language_rust.rs  language_tsx.rs  language_typescript.rs  mod.rs
src/metrics/: npa.rs
tree-sitter-ccomment/: Cargo.toml
tree-sitter-ccomment/bindings/rust/: lib.rs
tree-sitter-mozcpp/: Cargo.toml
tree-sitter-mozcpp/bindings/rust/: lib.rs
tree-sitter-mozjs/: Cargo.toml
tree-sitter-mozjs/bindings/rust/: lib.rs
tree-sitter-preproc/: Cargo.toml
tree-sitter-preproc/bindings/rust/: lib.rs
